[package]
name = "objective-rust"
version = "0.1.0"
edition = "2021"
authors = ["BrightShard <brightshard@brightshard.dev>"]
description = "Seamlessly bind Rust and Objective-C code."
repository = "https://github.com/Bright-Shard/objective-rust"
license = "MIT OR Apache-2.0"
keywords = ["objective-c", "ffi"]

[workspace]
members = ["objective-rust-macros"]

[dependencies]
objective-rust-macros = { path = "./objective-rust-macros", version = "0.1" }
